--- a/index.html
+++ b/index.html
@@ -1,27 +1,167 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Neon Heart Animation</title>
+<html lang="vi">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Chúc Mừng Sinh Nhật</title>
+<style>
+    body {
+        margin: 0;
+        font-family: 'Poppins', sans-serif;
+        background: radial-gradient(circle at top, #ffdde1, #ee9ca7, #ff758c);
+        overflow: hidden;
+        text-align: center;
+        color: white;
+    }
+    h1 {
+        margin-top: 100px;
+        font-size: 70px;
+        font-weight: 700;
+        letter-spacing: 2px;
+        text-shadow: 0 0 25px #fff, 0 0 50px #fffa, 0 0 80px #fff8;
+        animation: glow 2s infinite alternate;
+    }
 
-    <!-- Import map for three.js modules -->
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "https://cdn.jsdelivr.net/npm/three@0.162.0/build/three.module.js",
-          "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.162.0/examples/jsm/"
-        }
-      }
-    </script>
+    @keyframes glow {
+        from { text-shadow: 0 0 20px #fff; }
+        to { text-shadow: 0 0 40px #ffe066, 0 0 70px #ffcc00; }
+    }
 
-    <link rel="stylesheet" href="style.css" />
-  </head>
+    /* Hiệu ứng ánh sáng lung linh */
+    .shine {
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        background: radial-gradient(circle, #ffffff55, #ffffff00);
+        filter: blur(40px);
+        border-radius: 50%;
+        animation: shineMove 6s infinite linear;
+    }
+    @keyframes shineMove {
+        0% { transform: translate(-20vw, 10vh); }
+        50% { transform: translate(50vw, 30vh); }
+        100% { transform: translate(100vw, 5vh); }
+    }
 
-  <body>
-    <div id="container"></div>
-    <div class="glow"></div>
-    <div id="controls"></div>
+    /* Bóng bay */
+    .balloon {
+        position: absolute;
+        bottom: -150px;
+        width: 90px;
+        height: 110px;
+        background: radial-gradient(circle at 50% 30%, #fff, #ff4e50);
+        border-radius: 50% 50% 45% 45%;
+        animation: floatUp 7s infinite ease-in;
+        box-shadow: 0 15px 25px #0005;
+    }
 
-    <script type="module" src="script.js"></script>
-  </body>
+    @keyframes floatUp {
+        0% { transform: translateY(0) rotate(0deg); opacity: 1; }
+        100% { transform: translateY(-130vh) rotate(20deg); opacity: 0; }
+    }
+
+    /* Confetti */
+    .confetti {
+        position: absolute;
+        width: 12px;
+        height: 12px;
+        opacity: 0.9;
+        animation: fall 6s infinite linear;
+        border-radius: 2px;
+    }
+    @keyframes fall {
+        0% { transform: translateY(-100px) rotate(0deg); }
+        100% { transform: translateY(140vh) rotate(520deg); }
+    }
+
+    /* Hiệu ứng sao lấp lánh */
+    .star {
+        position: absolute;
+        width: 4px;
+        height: 4px;
+        background: white;
+        border-radius: 50%;
+        animation: twinkle 2s infinite ease-in-out;
+    }
+
+    @keyframes twinkle {
+        0% { opacity: 0.2; transform: scale(1); }
+        50% { opacity: 1; transform: scale(1.8); }
+        100% { opacity: 0.2; transform: scale(1); }
+    }
+    /* Hiệu ứng chữ chạy vào */
+    .title {
+        opacity: 0;
+        transform: translateY(-50px);
+        animation: slideIn 2.5s ease forwards;
+    }
+
+    .wish {
+        font-size: 26px;
+        width: 80%;
+        margin: 20px auto;
+        text-shadow: 0 0 10px #fff7;
+        opacity: 0;
+        animation: fadeWish 3s ease forwards 1.5s;
+    }
+
+    @keyframes slideIn {
+        0% { opacity: 0; transform: translateY(-80px); }
+        100% { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes fadeWish {
+        0% { opacity: 0; }
+        100% { opacity: 1; }
+    }
+</style>
+</head>
+<body>
+<h1 class="title">🎉 Chúc Mừng Sinh Nhật Như Ý 🎂</h1>
+<p class="wish">Chúc Như Ý tuổi mới càng ngày càng xinh đẹp, hạnh phúc, mạnh khỏe và thành công trong mọi ước mơ. Mong tuổi mới mang đến thật nhiều niềm vui, may mắn và những điều tuyệt vời nhất đến với bạn!💖</p>
+<script>
+    // Ánh sáng lung linh
+    for (let i = 0; i < 3; i++) {
+        let s = document.createElement('div');
+        s.classList.add('shine');
+        s.style.left = Math.random() * 80 + 'vw';
+        s.style.top = Math.random() * 60 + 'vh';
+        document.body.appendChild(s);
+    }
+
+    // Bóng bay
+    for (let i = 0; i < 15; i++) {
+        let b = document.createElement('div');
+        b.classList.add('balloon');
+        b.style.left = Math.random() * 100 + 'vw';
+        b.style.animationDelay = Math.random() * 3 + 's';
+        b.style.background = `radial-gradient(circle at 50% 30%, #fff, hsl(${Math.random()*360}, 80%, 60%))`;
+        document.body.appendChild(b);
+    }
+
+    // Confetti
+    for (let i = 0; i < 120; i++) {
+        let c = document.createElement('div');
+        c.classList.add('confetti');
+        c.style.left = Math.random() * 100 + 'vw';
+        c.style.width = (6 + Math.random()*6)+'px';
+        c.style.height = (6 + Math.random()*6)+'px';
+        c.style.animationDelay = Math.random() * 4 + 's';
+        c.style.background = `hsl(${Math.random()*360}, 90%, 60%)`;
+        document.body.appendChild(c);
+    }
+
+    // Sao lấp lánh
+    for (let i = 0; i < 60; i++) {
+        let st = document.createElement('div');
+        st.classList.add('star');
+        st.style.left = Math.random() * 100 + 'vw';
+        st.style.top = Math.random() * 100 + 'vh';
+        st.style.animationDelay = Math.random() * 3 + 's';
+        document.body.appendChild(st);
+    }
+</script>
+
+
+</body>
 </html>
